# xboxgamedemo

./: .gitignore  CMakeLists.txt  CMakePresets.json  CompilerAndLinker.cmake  README.md  download_makespritefont.ps1  vcpkg-configuration.json  vcpkg.json
testfirst/: CMakeLists.txt  Effects2D.cpp  Effects2D.h  Game.cpp  Game.h  InputRouter.cpp  InputRouter.h  Main.cpp  MicrosoftGameConfig.mgc  SnakeGame.cpp  SnakeGame.h  pch.h
testfirst/Assets/: README_FONT.md
